# obws

./: .editorconfig  .gitignore  CHANGELOG.md  Cargo.toml  Justfile  LICENSE  README.md  Vagrantfile  coverage.json  deny.toml  index.html  release.toml  rustfmt.toml
.config/: lingo.dic  spellcheck.toml
.github/: CODEOWNERS  FUNDING.yml  dependabot.yml
.github/workflows/: ci.yml  pages.yml
coverage/src/: common.rs.html  events.rs.html  lib.rs.html
coverage/src/client/: config.rs.html  connection.rs.html  filters.rs.html  general.rs.html  hotkeys.rs.html  inputs.rs.html  media_inputs.rs.html  mod.rs.html  outputs.rs.html  profiles.rs.html  recording.rs.html  replay_buffer.rs.html  scene_collections.rs.html  scene_items.rs.html  scenes.rs.html  sources.rs.html  streaming.rs.html  transitions.rs.html  ui.rs.html  virtual_cam.rs.html
coverage/src/requests/: config.rs.html  filters.rs.html  general.rs.html  hotkeys.rs.html  inputs.rs.html  media_inputs.rs.html  mod.rs.html  outputs.rs.html  profiles.rs.html  recording.rs.html  replay_buffer.rs.html  scene_collections.rs.html  scene_items.rs.html  scenes.rs.html  sources.rs.html  streaming.rs.html  transitions.rs.html  ui.rs.html  virtual_cam.rs.html
coverage/src/requests/custom/: source_settings.rs.html  transitions.rs.html
coverage/src/responses/: config.rs.html  filters.rs.html  general.rs.html  hotkeys.rs.html  inputs.rs.html  media_inputs.rs.html  mod.rs.html  outputs.rs.html  profiles.rs.html  recording.rs.html  replay_buffer.rs.html  scene_collections.rs.html  scene_items.rs.html  scenes.rs.html  sources.rs.html  streaming.rs.html  transitions.rs.html  ui.rs.html  virtual_cam.rs.html
coverage/src/serde/: bitflags_u8.rs.html  duration_millis.rs.html  duration_timecode.rs.html  json_string.rs.html  rgba8_inverse.rs.html
examples/: README.md  events.rs  iter_scenes.rs  screenshot.rs  simple.rs
src/: common.rs  de.rs  error.rs  events.rs  lib.rs  requests.rs
src/client/: canvases.rs  config.rs  connection.rs  filters.rs  general.rs  hotkeys.rs  inputs.rs  media_control.rs  media_inputs.rs  mod.rs  outputs.rs  profiles.rs  recording.rs  replay_buffer.rs  scene_collections.rs  scene_items.rs  scenes.rs  sources.rs  streaming.rs  studio_mode.rs  transitions.rs  ui.rs  virtual_cam.rs
src/docs/: mapping.md  mod.rs
src/requests/: canvases.rs  config.rs  filters.rs  general.rs  hotkeys.rs  ids.rs  inputs.rs  media_inputs.rs  mod.rs  outputs.rs  profiles.rs  recording.rs  replay_buffer.rs  scene_collections.rs  scene_items.rs  scenes.rs  ser.rs  sources.rs  streaming.rs  transitions.rs  ui.rs  virtual_cam.rs
src/requests/custom/: mod.rs  source_settings.rs  transitions.rs
src/responses/: canvases.rs  config.rs  de.rs  filters.rs  general.rs  hotkeys.rs  ids.rs  inputs.rs  media_inputs.rs  mod.rs  outputs.rs  profiles.rs  recording.rs  replay_buffer.rs  scene_collections.rs  scene_items.rs  scenes.rs  sources.rs  streaming.rs  transitions.rs  ui.rs  virtual_cam.rs
src/serde/: audio_tracks.rs  bitflags_u8.rs  duration_millis.rs  duration_timecode.rs  json_string.rs  mod.rs  rgba8_inverse.rs
tests/: README.md  config.rs  general.rs  inputs.rs  media_control.rs  media_inputs.rs  outputs.rs  profiles.rs  recording.rs  replay_buffer.rs  scene_collections.rs  scene_items.rs  scenes.rs  sources.rs  streaming.rs  studio_mode.rs  transitions.rs  virtual_cam.rs
tests/common/: mod.rs
tests/integration/: canvases.rs  client.rs  common.rs  config.rs  filters.rs  general.rs  hotkeys.rs  inputs.rs  main.rs  media_inputs.rs  outputs.rs  profiles.rs  recording.rs  replay_buffer.rs  scene_collections.rs  scene_items.rs  scenes.rs  sources.rs  streaming.rs  transitions.rs  ui.rs  virtual_cam.rs
