[package]
name = "obws"
version = "0.14.0"
authors = ["Dominik Nakamura <dnaka91@gmail.com>"]
edition = "2021"
rust-version = "1.70"
license = "MIT"
readme = "README.md"
description = "The obws (obvious) remote control library for OBS."
homepage = "https://github.com/dnaka91/obws"
repository = "https://github.com/dnaka91/obws"
categories = ["api-bindings", "web-programming"]
keywords = ["async", "obs", "obs-websocket", "remote-control", "tokio"]
include = ["examples/**/*", "tests/**/*", "src/**/*", "LICENSE", "README.md", "CHANGELOG.md"]

[package.metadata.docs.rs]
features = ["builder", "events", "tls"]

[package.metadata.cargo_check_external_types]
allowed_external_types = [
    "bitflags::iter::Iter", # TODO
    "bitflags::iter::IterNames", # TODO
    "bitflags::traits::Flags", # TODO
    "rgb::RGBA8", # TODO
    "semver::Comparator", # TODO
    "semver::Version", # TODO
    "serde::de::Deserialize", # TODO
    "serde::de::DeserializeOwned", # TODO
    "serde::ser::Serialize", # TODO
    "serde_json::value::Value", # TODO
    "time::duration::Duration", # TODO
    "uuid::Uuid", # TODO
]

[dependencies]
async-stream = { version = "0.3.6", optional = true }
base64 = "0.22.1"
bitflags = { version = "2.6.0", features = ["serde"] }
bon = { version = "3.3.2", optional = true }
futures-util = { version = "0.3.31", features = ["sink"] }
rgb = { version = "0.8.50", default-features = false }
semver = { version = "1.0.24", features = ["serde"] }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.134"
serde_repr = "0.1.19"
serde_with = "3.11.0"
sha2 = "0.10.8"
thiserror = "2.0.9"
time = "0.3.37"
tokio = { version = "1.38.1", features = ["net", "rt", "sync", "time"] }
tokio-tungstenite = "0.26.1"
tracing = "0.1.41"
uuid = { version = "1.11.0", features = ["serde"] }

[dev-dependencies]
anyhow = "1.0.95"
dotenvy = "0.15.7"
serde_test = "1.0.177"
tokio = { version = "1.38.1", features = ["fs", "macros", "rt-multi-thread", "time"] }
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }

[features]
default = []
test-integration = []
builder = ["dep:bon"]
events = ["dep:async-stream"]
tls = ["tokio-tungstenite/rustls-tls-webpki-roots"]

[[example]]
name = "events"
required-features = ["events"]

[[test]]
name = "integration"
required-features = ["events"]
